[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitwarden-html-export"
version = "1.0.0"
description = "Open a plaintext Bitwarden JSON export as temporary local HTML"
readme = "README.md"
authors = [
    { name = "pschlo", email = "70105856+pschlo@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.4"]

[project.scripts]
bitwarden-html-export = "bitwarden_html_export.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bitwarden_html_export"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/pyproject.toml",
    "/src/bitwarden_html_export",
    "/tests",
]

[tool.ruff]
line-length = 100
